--- a/Capstone_Appliances_Energy_Prediction.ipynb
+++ b/Capstone_Appliances_Energy_Prediction.ipynb
@@ -6,147 +6,42 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "vncDsAP0Gaoa",
-        "FJNUwmbgGyua",
-        "w6K7xa23Elo4",
-        "yQaldy8SH6Dl",
-        "mDgbUHAGgjLW",
-        "K5QZ13OEpz2H",
-        "lQ7QKXXCp7Bj",
-        "448CDAPjqfQr",
-        "KSlN3yHqYklG",
-        "t6dVpIINYklI",
-        "ijmpgYnKYklI",
-        "-JiQyfWJYklI",
-        "EM7whBJCYoAo",
-        "fge-S5ZAYoAp",
-        "85gYPyotYoAp",
-        "RoGjAbkUYoAp",
-        "4Of9eVA-YrdM",
-        "iky9q4vBYrdO",
-        "F6T5p64dYrdO",
-        "y-Ehk30pYrdP",
-        "bamQiAODYuh1",
-        "QHF8YVU7Yuh3",
-        "GwzvFGzlYuh3",
-        "qYpmQ266Yuh3",
-        "OH-pJp9IphqM",
-        "bbFf2-_FphqN",
-        "_ouA3fa0phqN",
-        "Seke61FWphqN",
-        "PIIx-8_IphqN",
-        "t27r6nlMphqO",
-        "r2jJGEOYphqO",
-        "b0JNsNcRphqO",
-        "BZR9WyysphqO",
-        "jj7wYXLtphqO",
-        "eZrbJ2SmphqO",
-        "rFu4xreNphqO",
-        "YJ55k-q6phqO",
-        "gCFgpxoyphqP",
-        "OVtJsKN_phqQ",
-        "lssrdh5qphqQ",
-        "U2RJ9gkRphqQ",
-        "1M8mcRywphqQ",
-        "tgIPom80phqQ",
-        "JMzcOPDDphqR",
-        "x-EpHcCOp1ci",
-        "X_VqEhTip1ck",
-        "8zGJKyg5p1ck",
-        "PVzmfK_Ep1ck",
-        "n3dbpmDWp1ck",
-        "ylSl6qgtp1ck",
-        "ZWILFDl5p1ck",
-        "M7G43BXep1ck",
-        "Ag9LCva-p1cl",
-        "E6MkPsBcp1cl",
-        "2cELzS2fp1cl",
-        "3MPXvC8up1cl",
         "NC_X3p0fY2L0",
-        "UV0SzAkaZNRQ",
-        "YPEH6qLeZNRQ",
-        "q29F0dvdveiT",
-        "EXh0U9oCveiU",
-        "22aHeOlLveiV",
+        "K5QZ13OEpz2H",
         "g-ATYxFrGrvw",
         "Yfr_Vlr8HBkt",
         "8yEUt7NnHlrM",
         "tEA2Xm5dHt1r",
         "I79__PHVH19G",
         "Ou-I18pAyIpj",
-        "fF3858GYyt-u",
         "4_0_7-oCpUZd",
         "hwyV_J3ipUZe",
         "3yB-zSqbpUZe",
-        "dEUvejAfpUZe",
         "Fd15vwWVpUZf",
         "bn_IUdTipZyH",
         "49K5P_iCpZyH",
         "Nff-vKELpZyI",
         "kLW572S8pZyI",
-        "dWbDXHzopZyI",
         "yLjJCtPM0KBk",
         "xiyOF9F70UgQ",
-        "7wuGOrhz0itI",
         "id1riN9m0vUs",
         "578E2V7j08f6",
         "89xtkJwZ18nB",
-        "67NQN5KX2AMe",
-        "Iwf50b-R2tYG",
-        "GMQiZwjn3iu7",
-        "WVIkgGqN3qsr",
-        "XkPnILGE3zoT",
-        "Hlsf0x5436Go",
-        "mT9DMSJo4nBL",
-        "c49ITxTc407N",
-        "OeJFEK0N496M",
-        "9ExmJH0g5HBk",
-        "cJNqERVU536h",
-        "k5UmGsbsOxih",
-        "T0VqWOYE6DLQ",
-        "qBMux9mC6MCf",
         "-oLEiFgy-5Pf",
         "C74aWNz2AliB",
         "2DejudWSA-a0",
-        "pEMng2IbBLp7",
-        "rAdphbQ9Bhjc",
         "TNVZ9zx19K6k",
-        "nqoHp30x9hH9",
         "rMDnDkt2B6du",
         "yiiVWRdJDDil",
-        "1UUpS68QDMuG",
-        "kexQrXU-DjzY",
-        "T5CmagL3EC8N",
         "BhH2vgX9EjGr",
-        "qjKvONjwE8ra",
-        "P1XJ9OREExlT",
-        "VFOzZv6IFROw",
-        "TIqpNgepFxVj",
         "VfCC591jGiD4",
         "OB4l2ZhMeS1U",
         "ArJBuiUVfxKd",
         "4qY1EAkEfxKe",
-        "PiV4Ypx8fxKe",
-        "TfvqoZmBfxKf",
-        "dJ2tPlVmpsJ0",
-        "JWYfwnehpsJ1",
-        "-jK_YjpMpsJ2",
-        "HAih1iBOpsJ2",
-        "zVGeBEFhpsJ2",
-        "bmKjuQ-FpsJ3",
-        "Fze-IPXLpx6K",
-        "7AN1z2sKpx6M",
-        "9PIHJqyupx6M",
-        "_-qAgymDpx6N",
-        "Z-hykwinpx6N",
-        "h_CCil-SKHpo",
-        "cBFFvTBNJzUa",
-        "HvGl1hHyA_VK",
         "EyNgTHvd2WFk",
         "KH5McJBi2d8v",
         "iW_Lq9qf2h6X",
         "-Kee-DAl2viO",
-        "gCX9965dhzqZ",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -525,7 +420,7 @@
     {
       "cell_type": "code",
       "source": [
-        "Aep_df = pd.read_csv('/content/drive/MyDrive/Alma Better/Capstone _Project/LR_Appliances Energy Prediction/data_application_energy.csv')"
+        "Aep_df = pd.read_csv('/content/drive/MyDrive/Alma Better/Capstone _Project/2 - LR_Appliances Energy Prediction/data_application_energy.csv')"
       ],
       "metadata": {
         "id": "PeqzGeE6af3M"
@@ -3243,64 +3138,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ***8.*** ***Future Work (Optional)***"
-      ],
-      "metadata": {
-        "id": "EyNgTHvd2WFk"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 1. Save the best performing ml model in a pickle file or joblib file format for deployment process.\n"
-      ],
-      "metadata": {
-        "id": "KH5McJBi2d8v"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Save the File"
-      ],
-      "metadata": {
-        "id": "bQIANRl32f4J"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 2. Again Load the saved model file and try to predict unseen data for a sanity check.\n"
-      ],
-      "metadata": {
-        "id": "iW_Lq9qf2h6X"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Load the File and predict unseen data."
-      ],
-      "metadata": {
-        "id": "oEXk9ydD2nVC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### ***Congrats! Your model is successfully created and ready for deployment on a live server for a real user interaction !!!***"
-      ],
-      "metadata": {
-        "id": "-Kee-DAl2viO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# **Conclusion**\n",
         "\n",
         "1) Depedent variable (Appliance energy consumption) has little correlation between feature and among those only  outside_building_temp,Windspeed,Tdewpoint,rv1,Month,Day,Hour are used for model prediction after feature seletion process is done.\n",
@@ -3315,15 +3152,6 @@
       ],
       "metadata": {
         "id": "3h-Z6yDFweGf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### ***Hurrah! You have successfully completed your Machine Learning Capstone Project !!!***"
-      ],
-      "metadata": {
-        "id": "gIfDvo9L0UH2"
       }
     }
   ]
